# pytrickle

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
pytrickle/: __init__.py  hierarchy.py  hypothesis.py
test/: test_pytrickle.py
